Update content and fix column not align when resize issue

--- a/float-grid.css
+++ b/float-grid.css
@@ -43,10 +43,12 @@
 
 .col-6 {
   width: 50%;
+  height: 476px;
 }
 /* Mobile */
 @media only screen and (max-width: 850px) {
 	.col-3, .col-4, .col-6 {
 	  width: 100%;
+    height: initial;
 	}	
 }
